Adjusts spacing to fix the height differences for phone portrait view.

--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -492,13 +492,13 @@
 
     /* Text To Players */
     #text_to_player {
-        min-height: 70px;
+        min-height: 85px;
     }
 
     /* Play Again */
     #play_again_button_container {
         margin-top: 0;
-        min-height: 40px;
+        /* min-height: 40px; */
     }
 
     /* High Score */
